fix(layout): set overflow-y to auto

--- a/packages/layout/src/assets/css/components/layout/layout.css
+++ b/packages/layout/src/assets/css/components/layout/layout.css
@@ -32,6 +32,6 @@
   }
 
   .dz-layout.fixed > main {
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 }
